--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
       <div class="logo">
         <h3 class="nav-title">Start BootStrap</h3>
       </div>
+      <span class="toggle"><i class="fas fa-bars"></i></span>
       <nav>
         <ul>
           <li><a href="#">DOWNLOAD</a></li>
@@ -72,37 +73,45 @@
         <div class="iconholder-content">
           <div class="row">
             <div class="icon">
-              <i class="fas fa-mobile-alt"></i>
-              <h3 class="icon-heading">Device Mockups</h3>
-              <p class="icon-desc">
-                Ready to use HTML/CSS device mockups, no Photoshop required!
-              </p>
+              <div class="mobile-icon"><i class="fas fa-mobile-alt"></i></div>
+              <div class="icon-content">
+                <h3 class="icon-heading">Device Mockups</h3>
+                <p class="icon-desc">
+                  Ready to use HTML/CSS device mockups, no Photoshop required!
+                </p>
+              </div>
             </div>
 
             <div class="icon">
               <i class="fas fa-camera"></i>
-              <h3 class="icon-heading">Flexible Use</h3>
-              <p class="icon-desc">
-                Put an image,video, animation, or anything else in the screen!
-              </p>
+              <div class="icon-content">
+                <h3 class="icon-heading">Flexible Use</h3>
+                <p class="icon-desc">
+                  Put an image,video, animation, or anything else in the screen!
+                </p>
+              </div>
             </div>
           </div>
 
           <div class="row">
             <div class="icon">
               <i class="fas fa-gift"></i>
-              <h3 class="icon-heading">Free to Use</h3>
-              <p class="icon-desc">
-                As always. this theme is free to Discover and use for any
-                purpose!
-              </p>
+              <div class="icon-content">
+                <h3 class="icon-heading">Free to Use</h3>
+                <p class="icon-desc">
+                  As always. this theme is free to Discover and use for any
+                  purpose!
+                </p>
+              </div>
             </div>
             <div class="icon">
               <i class="fas fa-unlock-alt"></i>
-              <h3 class="icon-heading">Open Source</h3>
-              <p class="icon-desc">
-                Since this theme is MIT licensed, you can use it commercially
-              </p>
+              <div class="icon-content">
+                <h3 class="icon-heading">Open Source</h3>
+                <p class="icon-desc">
+                  Since this theme is MIT licensed, you can use it commercially
+                </p>
+              </div>
             </div>
           </div>
         </div>
